# opentelemetry-demo-light

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  mkdocs.yml  otel-collector-config.yaml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy-docs.yml  helm-lint.yml  helm-publish.yml  release.yml
_bmad-output/: sprint-status.yaml
docs/: architecture.md  index.md  observability.md
docs/getting-started/: docker.md  helm-values.md  kubernetes.md
docs/services/: cart.md  checkout.md  frontend.md  load-generator.md  payment.md  product-catalog.md
helm/opentelemetry-demo-light/: Chart.yaml  values.yaml
helm/opentelemetry-demo-light/templates/: _helpers.tpl  cart.yaml  (+9 more)
kubernetes/: cart.yaml  checkout.yaml  frontend.yaml  k6-test-script.yaml  kustomization.yaml  load-generator-dynatrace.yaml  load-generator-otel.yaml  load-generator.yaml  namespace.yaml  otel-collector.yaml  payment.yaml  postgres.yaml  product-catalog.yaml  valkey.yaml
src/cart/: Dockerfile  README.md  build.gradle
src/checkout/: Dockerfile  README.md  checkout_service.py  requirements.txt  test_checkout.py
src/frontend/: Dockerfile  README.md  instrumentation.js  middleware.js  next.config.js  package-lock.json  package.json
src/load-generator/: Dockerfile  Dockerfile.dynatrace  README.md  locustfile.py  run.sh  test.js
src/payment/: Cargo.toml  Dockerfile  README.md  build.rs
src/payment/src/: main.rs
src/product-catalog/: Dockerfile  README.md  db.go  go.mod  go.sum  main.go  main_test.go  pq_array.go  pq_array_test.go  telemetry.go
(+28 files in other folders)
