[package]
name = "payment"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "payment"
path = "src/main.rs"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

# OTel
opentelemetry = { version = "0.22", features = ["metrics"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.15", features = ["tonic", "metrics"] }
tracing = "0.1"
tracing-opentelemetry = "0.23"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# gRPC health check
tonic-health = "0.11"

[build-dependencies]
tonic-build = "0.11"
